<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_header" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:text="@string/login"
            android:textColor="#999999"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/input_style"
            android:hint="@string/inputUserName"
            android:inputType="text"
            android:minHeight="35dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/input_style"
            android:ems="10"
            android:hint="@string/inputPassword"
            android:inputType="textPassword"
            android:minHeight="35dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <ImageButton
            android:id="@+id/btnSingUp"
            android:layout_width="151dp"
            android:layout_height="52dp"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btnLogIn"
            android:scaleType="fitCenter"
            android:src="@drawable/button_login_selector" />
    </LinearLayout>

</LinearLayout>
